--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "bcryptjs": "^2.4.3",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.12",
+    "jose": "^4.14.6",
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.4.1",
     "next": "13.4.12",
@@ -28,6 +29,7 @@
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-loader-spinner": "^5.4.5",
+    "react-redux": "^8.1.2",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
   },
